reshape to support resumable uploading for large file
to support large file and monitor the process, I modified the NPM
module. so isolated the NPM code as  a project code.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
 		"formidable": ">= 1.0.17",
 		"unirest": ">= 0.4.0",
 		"async": ">= 0.9.0",
-		"view-and-data": "*"
+		"async":       "^1.4.2",
+		"es6-promise": "^3.0.2",
+		"lodash":      "^3.10.1",
+		"mkdirp":      "^0.5.1",
+		"request":     "^2.64.0",
+		"util":        "^0.10.3",
+		"adm-zip":     "^0.4.7",
+		"zlibjs":      "^0.2.0"
 	},
 	"files": [
 		"LICENSE",
